--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/src/main/resources/worker-conf.yml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/src/main/resources/worker-conf.yml
@@ -7,12 +7,16 @@ distributed.scheduler.worker:
 # redis configuration
 redis:
   database: 0
-  password:
+  #host: localhost    # redis standalone host name
+  #port: 6379         # redis standalone port
+  #username: test123  # redis mast node username
+  password: 123456   # redis master node auth password
   connect-timeout: 1000
   timeout: 2000
   sentinel:
     master: REDIS_SENTINEL
     nodes: 112.74.170.75:16379,112.74.170.75:16380
+    #password: 654321 # redis sentinel auth password
   lettuce:
     pool:
       max-active: 20
@@ -20,4 +24,3 @@ redis:
       min-idle: 0
       max-wait: 1000
     shutdown-timeout: 1000
-
