add spring boot autoconfigure

--- a/scheduler-samples/pom.xml
+++ b/scheduler-samples/pom.xml
@@ -37,6 +37,11 @@
         <artifactId>scheduler-dispatch-http</artifactId>
         <version>${revision}</version>
       </dependency>
+      <dependency>
+        <groupId>cn.ponfee</groupId>
+        <artifactId>scheduler-configure</artifactId>
+        <version>${revision}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
