--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.11</version>
+    <version>2.7.4</version>
+    <relativePath/>
   </parent>
 
   <groupId>cn.ponfee</groupId>
@@ -23,6 +24,7 @@
     <module>scheduler-worker</module>
     <module>scheduler-registry</module>
     <module>scheduler-dispatch</module>
+    <module>scheduler-configure</module>
     <module>scheduler-samples</module>
   </modules>
 
@@ -98,6 +100,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-log4j2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
