--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/pom.xml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/pom.xml
@@ -17,15 +17,15 @@
   <dependencies>
     <dependency>
       <groupId>cn.ponfee</groupId>
+      <artifactId>scheduler-worker</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-registry-redis</artifactId>
     </dependency>
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-dispatch-redis</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>scheduler-worker</artifactId>
     </dependency>
   </dependencies>
 
@@ -33,11 +33,15 @@
 
     <plugins>
       <!-- https://maven.apache.org/plugins/maven-shade-plugin/examples/executable-jar.html -->
+      <!-- error: Cannot find 'resource' in class org.apache.maven.plugins.shade.resource.ManifestResourceTransformer
+           resolve: https://stackoverflow.com/questions/43626806/shade-for-parameter-resource-cannot-find-resource-in-class-org-apache-maven-p
+       -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <executions>
           <execution>
+            <id>shade-${project.artifactId}</id>
             <phase>package</phase>
             <goals>
               <goal>shade</goal>
@@ -64,6 +68,10 @@
                 <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                   <resource>META-INF/spring.tooling</resource>
                 </transformer>
+                <transformer implementation="org.springframework.boot.maven.PropertiesMergingResourceTransformer">
+                  <resource>META-INF/spring.factories</resource>
+                </transformer>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
                     <Main-Class>cn.ponfee.scheduler.worker.samples.Main</Main-Class>
