--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-springboot/pom.xml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-springboot/pom.xml
@@ -16,6 +16,10 @@
 
   <dependencies>
     <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>scheduler-worker</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
       <exclusions>
@@ -39,7 +43,7 @@
     </dependency>
     <dependency>
       <groupId>cn.ponfee</groupId>
-      <artifactId>scheduler-worker</artifactId>
+      <artifactId>scheduler-configure</artifactId>
     </dependency>
   </dependencies>
 
