--- a/scheduler-samples/scheduler-samples-merged/src/main/resources/application-worker.yml
+++ b/scheduler-samples/scheduler-samples-merged/src/main/resources/application-worker.yml
@@ -1,5 +1,6 @@
 # scheduler worker configuration
-distributed.scheduler.worker:
-  group: default
-  maximum-pool-size: 100
-  keep-alive-time-seconds: 300
+distributed.scheduler:
+  worker:
+    group: default
+    maximum-pool-size: 100
+    keep-alive-time-seconds: 300
