--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-springboot/src/main/resources/application.yml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-springboot/src/main/resources/application.yml
@@ -1,45 +1,2 @@
 server.port: 8082
-logging.config: classpath:log4j2.xml
-
-# actuator monitor configuration
-management:
-  endpoints.web.exposure.include: "*"
-  endpoint:
-    gateway.enabled: true
-    health.show-details: always
-
-# tomcat server configuration
-server.tomcat.mbeanregistry.enabled: true
-
-# redis configuration
-spring.redis:
-  database: 0
-  #host: localhost
-  #port: 6379
-  #username: test123
-  password: 123456   # redis master node auth password
-  connect-timeout: 1000
-  timeout: 2000
-  sentinel:
-    master: REDIS_SENTINEL
-    nodes: 112.74.170.75:16379,112.74.170.75:16380
-    #password: 654321 # redis sentinel auth password
-  client-type: LETTUCE
-  lettuce:
-    pool:
-      max-active: 20
-      max-idle: 8
-      min-idle: 0
-      max-wait: 1000
-    shutdown-timeout: 1000
-
-# scheduler worker configuration
-distributed.scheduler:
-  worker:
-    group: default
-    maximum-pool-size: 100
-    keep-alive-time-seconds: 300
-  http:
-    connect-timeout: 2000
-    read-timeout: 5000
-    max-retry-times: 3
+spring.profiles.include: web,worker,redis,consul
