--- a/scheduler-samples/scheduler-samples-separately/pom.xml
+++ b/scheduler-samples/scheduler-samples-separately/pom.xml
@@ -21,4 +21,10 @@
     <module>scheduler-samples-separately-worker-frameless</module>
   </modules>
 
+  <dependencies>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>scheduler-samples-common</artifactId>
+    </dependency>
+  </dependencies>
 </project>
