modify pom.xml dependency

--- a/scheduler-dispatch/scheduler-dispatch-redis/pom.xml
+++ b/scheduler-dispatch/scheduler-dispatch-redis/pom.xml
@@ -19,6 +19,10 @@
       <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-dispatch-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
