--- a/scheduler-common/pom.xml
+++ b/scheduler-common/pom.xml
@@ -66,6 +66,11 @@
       <artifactId>groovy</artifactId>
       <version>3.0.13</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
