--- a/scheduler-core/pom.xml
+++ b/scheduler-core/pom.xml
@@ -19,6 +19,11 @@
       <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
