--- a/scheduler-samples/scheduler-samples-merged/src/main/resources/application.yml
+++ b/scheduler-samples/scheduler-samples-merged/src/main/resources/application.yml
@@ -1,2 +1,2 @@
 server.port: 8080
-spring.profiles.include: web,mysql,supervisor,worker,redis,consul
+spring.profiles.include: web,mysql,supervisor,worker,redis
