add prime count job handler demo

--- a/scheduler-samples/scheduler-samples-common/pom.xml
+++ b/scheduler-samples/scheduler-samples-common/pom.xml
@@ -14,4 +14,10 @@
   <artifactId>scheduler-samples-common</artifactId>
   <name>${project.artifactId}</name>
 
+  <dependencies>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>scheduler-core</artifactId>
+    </dependency>
+  </dependencies>
 </project>
