--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-supervisor/pom.xml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-supervisor/pom.xml
@@ -40,7 +40,7 @@
               <artifactId>lombok</artifactId>
             </exclude>
           </excludes>
-          <mainClass>cn.ponfee.scheduler.supervisor.samples.SupervisorApplication</mainClass>
+          <mainClass>cn.ponfee.scheduler.samples.supervisor.SupervisorApplication</mainClass>
         </configuration>
       </plugin>
     </plugins>
