--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/pom.xml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/pom.xml
@@ -67,7 +67,7 @@
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
-                    <Main-Class>cn.ponfee.scheduler.worker.samples.Main</Main-Class>
+                    <Main-Class>cn.ponfee.scheduler.samples.worker.Main</Main-Class>
                   </manifestEntries>
                 </transformer>
               </transformers>
