--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,4 +23,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: ./mvnw clean package -DskipTests -Dcheckstyle.skip -Dmaven.javadoc.skip=true -B -V -U --file pom.xml
