add zookeeper registry

--- a/scheduler-registry/pom.xml
+++ b/scheduler-registry/pom.xml
@@ -19,6 +19,7 @@
     <module>scheduler-registry-api</module>
     <module>scheduler-registry-redis</module>
     <module>scheduler-registry-consul</module>
+    <module>scheduler-registry-zookeeper</module>
   </modules>
 
 </project>
