--- a/scheduler-samples/pom.xml
+++ b/scheduler-samples/pom.xml
@@ -34,6 +34,11 @@
     </dependency>
     <dependency>
       <groupId>cn.ponfee</groupId>
+      <artifactId>scheduler-registry-zookeeper</artifactId>
+      <version>${revision}</version>
+    </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-dispatch-redis</artifactId>
       <version>${revision}</version>
     </dependency>
