--- a/scheduler-common/pom.xml
+++ b/scheduler-common/pom.xml
@@ -59,12 +59,12 @@
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
-      <version>2.11.1</version>
+      <version>2.12.0</version>
     </dependency>
     <dependency>
-      <groupId>org.codehaus.groovy</groupId>
+      <groupId>org.apache.groovy</groupId>
       <artifactId>groovy</artifactId>
-      <version>3.0.13</version>
+      <version>4.0.6</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
