--- a/scheduler-samples/scheduler-samples-common/src/main/resources/application-mysql.yml
+++ b/scheduler-samples/scheduler-samples-common/src/main/resources/application-mysql.yml
@@ -8,3 +8,4 @@ spring.datasource.distributed-scheduler:
   maximum-pool-size: 100
   connection-timeout: 2000
   pool-name: distributed_scheduler
+  #connection-test-query: SELECT 1    # jdbc4不建议配置connectionTestQuery
