--- a/scheduler-samples/scheduler-samples-common/pom.xml
+++ b/scheduler-samples/scheduler-samples-common/pom.xml
@@ -19,5 +19,10 @@
       <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-test</artifactId>
+      <version>5.4.0</version>
+    </dependency>
   </dependencies>
 </project>
