optimize code & upgrade jar version

--- a/scheduler-registry/scheduler-registry-redis/pom.xml
+++ b/scheduler-registry/scheduler-registry-redis/pom.xml
@@ -23,6 +23,13 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.github.kstyrc</groupId>
+      <artifactId>embedded-redis</artifactId>
+      <version>0.6</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
