--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/pom.xml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/pom.xml
@@ -19,6 +19,11 @@
       <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-worker</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-pool2</artifactId>
+      <version>2.11.1</version>
+    </dependency>
   </dependencies>
 
   <build>
