--- a/scheduler-registry/scheduler-registry-consul/pom.xml
+++ b/scheduler-registry/scheduler-registry-consul/pom.xml
@@ -31,6 +31,11 @@
       <version>2.2.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>consul</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
