--- a/scheduler-supervisor/pom.xml
+++ b/scheduler-supervisor/pom.xml
@@ -42,6 +42,11 @@
 
     <!-- test dependency -->
     <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>mysql</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-samples-common</artifactId>
       <version>${revision}</version>
