--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <springframework.version>5.3.24</springframework.version>
     <mapstruct.version>1.5.3.Final</mapstruct.version>
     <lombok.version>1.18.24</lombok.version>
-    <revision>1.0-SNAPSHOT</revision>
+    <revision>1.3-SNAPSHOT</revision>
   </properties>
 
   <dependencyManagement>
@@ -192,6 +192,12 @@
       <version>3.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+      <version>1.5.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <repositories>
@@ -242,7 +248,7 @@
   </distributionManagement>
 
   <build>
-    <finalName>${project.artifactId}</finalName>
+    <finalName>${project.artifactId}-${project.version}</finalName>
 
     <resources>
       <resource>
